Fixes to sizing of the subnav so it's usable on mobile

--- a/wp-content/themes/standard-industries/styles/components/_subnav.scss
+++ b/wp-content/themes/standard-industries/styles/components/_subnav.scss
@@ -4,15 +4,14 @@
 
 .subnav {
   background-color: $black;
-  height: 52px;
 
   @include large-and-up {
-    height: 68px;
     padding: 0 $site-margin-lg;
   }
 
   .menu__list {
     display: flex;
+    flex-wrap: wrap;
     height: 100%;
     list-style-type: none;
     margin: 0;
@@ -26,14 +25,26 @@
     }
   }
 
+  .menu__list-item {
+    flex-grow: 1;
+
+    @include medium-and-up {
+      flex-grow: 0;
+    }
+  }
+
   .menu__link {
     align-items: center;
     color: $white !important;
     display: flex;
-    height: 100%;
+    height: 52px;
     padding: 0 $site-margin-sm;
     text-decoration: none;
     transition: background-color 100ms linear;
+
+    @include large-and-up {
+      height: 68px;
+    }
 
     &:hover {
       background-color: $red;
